--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "2.1.5"
   },
   "scripts": {
